--- a/public/css/style.css
+++ b/public/css/style.css
@@ -129,14 +129,30 @@ span.date {
     opacity: 0.7;
 }
 .todo-create {
-    width: 50px;
-    height: 50px;
+    width: 45px;
+    height: 45px;
     border-radius: 50%;
     background: #fc3554;
     border: none;
     position: relative;
     top: -25px;
     left: 115px;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+}
+.todo-create:hover {
+    -moz-transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+    -o-transform: scale(1.5);
+    -ms-transform: scale(1.5);
+    transform: scale(1.5);
+    -webkit-transition: all 800ms ease;
+    -moz-transition: all 800ms ease;
+    -ms-transition: all 800ms ease;
+    -o-transition: all 800ms ease;
+    transition: all 800ms ease;
 }
 .todo-add {
     width: 50px;
